--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
+    "react-addons-css-transition-group": "^15.6.2",
+    "react-chat-bubble": "^0.8.7",
+    "react-chat-ui": "^0.2.4",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17"
+    "react-scripts": "1.0.17",
+    "react-scroll": "^1.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
