--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-chat-bubble": "^0.8.7",
