--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "api-ai-javascript": "^2.0.0-beta.14",
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
     "react-addons-css-transition-group": "^15.6.2",
     "react-chat-bubble": "^0.8.7",
     "react-chat-ui": "^0.2.4",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
-    "react-scroll": "^1.7.3"
+    "react-scroll": "^1.7.3",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
