--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "animate.css": "^3.5.2",
     "api-ai-javascript": "^2.0.0-beta.14",
     "material-ui": "^0.20.0",
     "react": "^16.2.0",
